--- a/src/main/resources/hi/is/vidmot/veganifel/ritari-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/ritari-view.fxml
@@ -1,22 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<BorderPane fx:controller="hi.is.vidmot.veganifel.ritariController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.is.vidmot.veganifel.ritariController">
    <top>
       <MenuBar prefHeight="30.0" prefWidth="600.0" BorderPane.alignment="CENTER">
         <menus>
@@ -31,7 +21,7 @@
    <center>
       <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" prefHeight="44.0" prefWidth="484.0" text="Veldu spil sem þú villt ekki gefa ritaranum þínum">
+            <Label alignment="CENTER" prefHeight="44.0" prefWidth="484.0" text="Veldu spil sem þú villt setja niður á borðið">
                <font>
                   <Font size="21.0" />
                </font>
@@ -39,7 +29,6 @@
             <GridPane alignment="CENTER" prefHeight="437.0" prefWidth="870.0">
               <columnConstraints>
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
@@ -54,24 +43,17 @@
                   </ImageView>
                   <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
                      <image>
-                        <Image url="@../Myndir/Smidur.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
-                     <image>
                         <Image url="@../Myndir/Krakkar.jpg" />
                      </image>
                   </ImageView>
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
          </children>
       </VBox>
    </center>
    <bottom>
-      <Button onAction="#Next" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" style="-fx-background-radius: 30;" text="-&gt;" BorderPane.alignment="CENTER_RIGHT">
+      <Button mnemonicParsing="false" onAction="#Next" prefHeight="60.0" prefWidth="60.0" style="-fx-background-radius: 30;" text="-&gt;" BorderPane.alignment="CENTER_RIGHT">
          <BorderPane.margin>
             <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
          </BorderPane.margin>
