--- a/src/main/resources/hi/is/vidmot/veganifel/ritari-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/ritari-view.fxml
@@ -6,60 +6,68 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.is.vidmot.veganifel.ritariController">
-   <top>
-      <MenuBar prefHeight="30.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="Hjálp">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-   </top>
-   <center>
-      <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
-         <children>
-            <Label alignment="CENTER" prefHeight="44.0" prefWidth="484.0" text="Veldu spil sem þú villt setja niður á borðið">
-               <font>
-                  <Font size="21.0" />
-               </font>
-            </Label>
-            <GridPane alignment="CENTER" prefHeight="437.0" prefWidth="870.0">
-              <columnConstraints>
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="380.0" minHeight="10.0" prefHeight="379.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="192.0" minHeight="5.0" prefHeight="41.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../Myndir/Krakkar.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
-                     <image>
-                        <Image url="@../Myndir/Krakkar.jpg" />
-                     </image>
-                  </ImageView>
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-               </children>
-            </GridPane>
-         </children>
-      </VBox>
-   </center>
-   <bottom>
-      <Button mnemonicParsing="false" onAction="#Next" prefHeight="60.0" prefWidth="60.0" style="-fx-background-radius: 30;" text="-&gt;" BorderPane.alignment="CENTER_RIGHT">
-         <BorderPane.margin>
-            <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
-         </BorderPane.margin>
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </Button>
-   </bottom>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.is.vidmot.veganifel.verkefnastjoriController">
+    <top>
+        <MenuBar prefHeight="30.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+            <menus>
+                <Menu mnemonicParsing="false" text="Hjálp">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="Close" />
+                    </items>
+                </Menu>
+            </menus>
+        </MenuBar>
+    </top>
+    <center>
+        <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
+            <children>
+                <Label alignment="CENTER" prefHeight="44.0" prefWidth="484.0" text="Veldu spil sem þú villt leggja niður á borðið">
+                    <font>
+                        <Font size="21.0" />
+                    </font>
+                </Label>
+                <GridPane alignment="CENTER" prefHeight="437.0" prefWidth="870.0">
+                    <columnConstraints>
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints maxHeight="380.0" minHeight="10.0" prefHeight="379.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="192.0" minHeight="5.0" prefHeight="41.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                        <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../Myndir/Krakkar.jpg" />
+                            </image>
+                        </ImageView>
+                        <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+                            <image>
+                                <Image url="@../Myndir/Smidur.jpg" />
+                            </image>
+                        </ImageView>
+                        <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+                            <image>
+                                <Image url="@../Myndir/Krakkar.jpg" />
+                            </image>
+                        </ImageView>
+                        <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                    </children>
+                </GridPane>
+            </children>
+        </VBox>
+    </center>
+    <bottom>
+        <Button mnemonicParsing="false" onAction="#Next" prefHeight="60.0" prefWidth="60.0" style="-fx-background-radius: 30;" text="-&gt;" BorderPane.alignment="CENTER_RIGHT">
+            <BorderPane.margin>
+                <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+            </BorderPane.margin>
+            <font>
+                <Font name="System Bold" size="20.0" />
+            </font>
+        </Button>
+    </bottom>
 </BorderPane>
