--- a/src/main/resources/hi/is/vidmot/veganifel/main-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/main-view.fxml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane fx:controller="hi.is.vidmot.veganifel.mainController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.is.vidmot.veganifel.mainController">
    <top>
       <MenuBar prefWidth="600.0" BorderPane.alignment="CENTER">
         <menus>
@@ -24,12 +36,12 @@
                <children>
                   <HBox fx:id="TextBox" alignment="CENTER" layoutX="44.0" layoutY="40.0" prefHeight="71.0" prefWidth="540.0" style="-fx-border-radius: 15; -fx-border-color: Black; -fx-border-width: 3; -fx-background-color: #DFE6E9; -fx-background-radius: 16;">
                      <children>
-                        <Label prefHeight="42.0" prefWidth="276.0" text="Nafn er verkefnastjóri. Nafn velur ">
+                        <Label fx:id="fxTextVerk" prefHeight="42.0" prefWidth="276.0" text="Nafn er verkefnastjóri. Nafn velur ">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <ChoiceBox prefHeight="29.0" prefWidth="103.0" />
+                        <ChoiceBox fx:id="fxListRitara" prefHeight="29.0" prefWidth="103.0" />
                         <Label prefHeight="28.0" prefWidth="108.0" text="  sem ritara.">
                            <font>
                               <Font size="18.0" />
@@ -218,7 +230,7 @@
                      </HBox.margin></Button>
                </children>
             </HBox>
-            <Button onAction="#DragaSpil" fx:id="Draga" mnemonicParsing="false" prefHeight="43.0" prefWidth="180.0" text="Draga Spil">
+            <Button fx:id="Draga" mnemonicParsing="false" onAction="#DragaSpil" prefHeight="43.0" prefWidth="180.0" text="Draga Spil">
                <VBox.margin>
                   <Insets top="5.0" />
                </VBox.margin>
