--- a/src/main/resources/hi/is/vidmot/veganifel/main-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/main-view.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -34,14 +34,14 @@
          <children>
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <HBox fx:id="TextBox" alignment="CENTER" layoutX="44.0" layoutY="40.0" prefHeight="71.0" prefWidth="540.0" style="-fx-border-radius: 15; -fx-border-color: Black; -fx-border-width: 3; -fx-background-color: #DFE6E9; -fx-background-radius: 16;">
+                  <HBox fx:id="TextBox" alignment="CENTER" layoutX="1.0" layoutY="40.0" prefHeight="71.0" prefWidth="631.0" style="-fx-border-radius: 15; -fx-border-color: Black; -fx-border-width: 3; -fx-background-color: #DFE6E9; -fx-background-radius: 16;">
                      <children>
                         <Label fx:id="fxTextVerk" prefHeight="42.0" prefWidth="276.0" text="Nafn er verkefnastjóri. Nafn velur ">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <ChoiceBox fx:id="fxListRitara" prefHeight="29.0" prefWidth="103.0" />
+                        <ComboBox fx:id="fxListRitara" prefWidth="150.0" />
                         <Label prefHeight="28.0" prefWidth="108.0" text="  sem ritara.">
                            <font>
                               <Font size="18.0" />
