--- a/src/main/resources/hi/is/vidmot/veganifel/verkefnastjori-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/verkefnastjori-view.fxml
@@ -19,7 +19,7 @@
       </MenuBar>
    </top>
    <center>
-      <VBox fx:id="fxerkefnastjori" alignment="TOP_CENTER" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
          <children>
             <Label fx:id="fxbreytaTexta" alignment="CENTER" prefHeight="44.0" prefWidth="484.0" text="Veldu spil sem þú villt ekki gefa ritaranum þínum">
                <font>
@@ -52,9 +52,9 @@
                         <Image url="@../Myndir/Spil/Krakkar.jpg" />
                      </image>
                   </ImageView>
-                  <Button mnemonicParsing="false" onMouseClicked="#veljaSpil" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" onMouseClicked="#veljaSpil" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" onMouseClicked="#veljaSpil" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false"  prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false"  prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false"  prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                </children>
             </GridPane>
          </children>
