--- a/src/main/resources/hi/is/vidmot/veganifel/Shlutverk-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/Shlutverk-view.fxml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" stylesheets="@ingangur.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.is.vidmot.veganifel.hlutverkController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" stylesheets="@ingangur.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.is.vidmot.veganifel.hlutverkController">
    <children>
       <VBox alignment="TOP_RIGHT" prefHeight="600.0" prefWidth="870.0">
          <children>
@@ -22,7 +30,12 @@
                <font>
                   <Font size="32.0" />
                </font></Label>
-            <GridPane fx:id="Hlutverk" alignment="CENTER" prefHeight="461.0" prefWidth="870.0" stylesheets="@ingangur.css">
+            <Label alignment="CENTER" prefHeight="38.0" prefWidth="869.0" text="Ýttu á nafnið þitt til að sjá hvaða hlutverk þú fékkst">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <GridPane fx:id="Hlutverk" alignment="CENTER" prefHeight="409.0" prefWidth="870.0" stylesheets="@ingangur.css">
               <columnConstraints>
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -44,7 +57,7 @@
                   <Button fx:id="B8" mnemonicParsing="false" onAction="#synaH" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                </children>
             </GridPane>
-            <Button mnemonicParsing="false" onAction="#Next" prefHeight="70.0" prefWidth="60.0" style="-fx-background-radius: 30;" text="-&gt;">
+            <Button mnemonicParsing="false" onAction="#Next" prefHeight="60.0" prefWidth="60.0" style="-fx-background-radius: 30;" text="-&gt;">
                <VBox.margin>
                   <Insets bottom="10.0" right="10.0" />
                </VBox.margin>
