--- a/src/main/resources/hi/is/vidmot/veganifel/verkefnastjori-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/verkefnastjori-view.fxml
@@ -39,17 +39,17 @@
                <children>
                   <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Myndir/Spil/Krakkar.jpg" />
+                        <Image url="@../Myndir/Spil/Graen.jpg" />
                      </image>
                   </ImageView>
                   <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
                      <image>
-                        <Image url="@../Myndir/Spil/Smidur.jpg" />
+                        <Image url="@../Myndir/Spil/Raudur.jpg" />
                      </image>
                   </ImageView>
                   <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
                      <image>
-                        <Image url="@../Myndir/Spil/Krakkar.jpg" />
+                        <Image url="@../Myndir/Spil/Raudur.jpg" />
                      </image>
                   </ImageView>
                   <Button mnemonicParsing="false"  prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="1" GridPane.rowIndex="1" />
