--- a/src/main/resources/hi/is/vidmot/veganifel/verkefnastjori-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/verkefnastjori-view.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
@@ -19,44 +18,20 @@
       </MenuBar>
    </top>
    <center>
-      <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
+      <VBox fx:id="fxerkefnastjori" alignment="TOP_CENTER" BorderPane.alignment="CENTER">
          <children>
             <Label fx:id="fxbreytaTexta" alignment="CENTER" prefHeight="44.0" prefWidth="484.0" text="Veldu spil sem þú villt ekki gefa ritaranum þínum">
                <font>
                   <Font size="21.0" />
                </font>
             </Label>
-            <GridPane alignment="CENTER" prefHeight="437.0" prefWidth="870.0">
-              <columnConstraints>
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="380.0" minHeight="10.0" prefHeight="379.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="192.0" minHeight="5.0" prefHeight="41.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <HBox prefHeight="456.0" prefWidth="870.0">
                <children>
-                  <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../Myndir/Spil/Graen.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
-                     <image>
-                        <Image url="@../Myndir/Spil/Raudur.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
-                     <image>
-                        <Image url="@../Myndir/Spil/Raudur.jpg" />
-                     </image>
-                  </ImageView>
-                  <Button mnemonicParsing="false"  prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false"  prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false"  prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <VBox fx:id="S1" prefHeight="454.0" prefWidth="285.0" />
+                  <VBox fx:id="S2" prefHeight="454.0" prefWidth="291.0" />
+                  <VBox fx:id="S3" prefHeight="454.0" prefWidth="290.0" />
                </children>
-            </GridPane>
+            </HBox>
          </children>
       </VBox>
    </center>
