--- a/src/main/resources/hi/is/vidmot/veganifel/verkefnastjori-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/verkefnastjori-view.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.is.vidmot.veganifel.verkefnastjoriController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.is.vidmot.veganifel.verkefnastjoriController">
    <top>
       <MenuBar prefHeight="30.0" prefWidth="600.0" BorderPane.alignment="CENTER">
         <menus>
@@ -25,13 +31,7 @@
                   <Font size="21.0" />
                </font>
             </Label>
-            <HBox prefHeight="456.0" prefWidth="870.0">
-               <children>
-                  <VBox fx:id="S1" prefHeight="454.0" prefWidth="285.0" />
-                  <VBox fx:id="S2" prefHeight="454.0" prefWidth="291.0" />
-                  <VBox fx:id="S3" prefHeight="454.0" prefWidth="290.0" />
-               </children>
-            </HBox>
+            <HBox fx:id="fxSpilaListi" prefHeight="456.0" prefWidth="870.0" />
          </children>
       </VBox>
    </center>
